# stock-radar

./: .gitignore  Makefile  README.md  pants.ci.toml  pants.toml
.github/workflows/: reviewdog.yml
python/build-support/: bandit.yaml  bandit_lockfile.txt  black_lockfile.txt  docformatter_lockfile.txt  flake8.config  flake8_lockfile.txt  isort_lockfile.txt  mypy_lockfile.txt  mypy_protobuf_lockfile.txt  pylint.config  pylint_lockfile.txt  pyproject.toml  pytest_lockfile.txt
python/stock-radar-app/: BUILD  Dockerfile  Makefile  empty.pyproject.toml  pyproject.toml
python/stock-radar-app/stock_radar_app/: BUILD  main.py
python/stock-radar-app/stock_radar_app/config/: BUILD  config.yml  container.py  uvicorn-log.yml
python/stock-radar-app/stock_radar_app/controller/: BUILD  chart_controller.py  healthcheck_controller.py
python/stock-radar-app/stock_radar_app/data/: BUILD
python/stock-radar-app/stock_radar_app/domain/: BUILD  stock_price_history.py
python/stock-radar-app/stock_radar_app/domain/trace_generator/: BUILD  bollinger_band_trace_generator.py  candlestick_trace_generator.py  macd_trace_generator.py  sma_trace_generator.py  trace_generator.py
python/stock-radar-app/stock_radar_app/gateway/: BUILD  database.py  repository_factory.py  stock_price_history_repository.py
python/stock-radar-app/stock_radar_app/log/: log.py
python/stock-radar-app/stock_radar_app/service/: BUILD  irepository_factory.py  istock_price_history_repository.py
python/stock-radar-app/stock_radar_app/statics/: BUILD  index.html
python/stock-radar-app/stock_radar_app/statics/assets/: index-17792f05.js  index-8a91f2fe.js  index-b837d223.css
python/stock-radar-app/stock_radar_app/usecase/: BUILD  user_usecase_chart.py
typescript/stock-radar-frontend/: .env.development  .env.production  .eslintignore  .eslintrc.yml  .prettierrc  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript/stock-radar-frontend/src/: main.css  main.tsx
typescript/stock-radar-frontend/src/app/: factory.ts  i18n.ts  store.ts
typescript/stock-radar-frontend/src/components/: AppBreadcrumb.tsx  AppDimmer.tsx  Candlestick.tsx  ErrorMessage.tsx  index.ts
typescript/stock-radar-frontend/src/components/apexcharts/: AbstractApexChart.ts  ApexChartMain.ts  ApexChartSub1.ts  ApexChartSub2.ts  BollingerBandDataConverter.ts  CandlestickDataConverter.ts  ChartDataConverterFactory.ts  MacdDataConverter.ts  SmaDataConverter.ts
typescript/stock-radar-frontend/src/containers/: App.css  App.tsx  HealthCheck.tsx  data.ts
typescript/stock-radar-frontend/src/containers/dashboard/: ApexChartDashboard.tsx
typescript/stock-radar-frontend/src/features/: auth.ts  base.ts  chart.ts
typescript/stock-radar-frontend/src/models/: trace_data.ts
typescript/stock-radar-frontend/src/utils/: util.ts
