[tool.poetry]
name = "stock-radar-app"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_radar_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.92.0"
uvicorn = "0.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "23.1.0"
docformatter = "1.5.1"
isort = "5.9.3"
pylint = "2.13.0"
pytest = "7.0.1"
mypy = "0.961"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
