[tool.poetry]
name = "stock-radar-app"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_radar_app"}]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
fastapi = "0.92.0"
uvicorn = "0.20.0"
opentelemetry-exporter-jaeger = "1.16.0"
opentelemetry-instrumentation-fastapi = "0.37b0"
prometheus-fastapi-instrumentator = "5.9.1"
alembic = "1.9.4"
sqlalchemy = "2.0.5"
sqlalchemy-utils = "0.40.0"
dependency-injector = "4.41.0"
pandas = "1.5.3"
ta-lib = "0.4.25"
pydantic = "1.10.5"
pyaml-env = "^1.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "23.1.0"
docformatter = "1.5.1"
isort = "5.9.3"
pylint = "2.13.0"
pytest = "7.0.1"
mypy = "0.961"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
